--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "node App.js"
+    "start": "nodemon App.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "express-validator": "^7.2.1",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
-  "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "session": "^0.1.0"
   }
 }
